benchmarks/scheduler/sw/make_out
/usr/bin/arm-none-eabi-gcc -g -O3 -lunistd -I .   -c -o driver.o driver.c
/usr/bin/arm-none-eabi-gcc -g -O3 -lunistd -I .   -c -o mem_manage.o mem_manage.c
/usr/bin/arm-none-eabi-gcc -g -O3 -lunistd -I .   -c -o scheduler.o scheduler.c
/usr/bin/arm-none-eabi-gcc -g -O3 -lunistd -I .   -c -o test.o test.c
/usr/bin/arm-none-eabi-gcc -g -O3 -lunistd -I .   -c -o canny.o canny.c
canny.c: In function 'process_raw':
canny.c:42:52: error: 'is_args' undeclared (first use in this function); did you mean 'isp_args'?
     isp_args *args = (isp_args*) get_memory(sizeof(is_args));
                                                    ^~~~~~~
                                                    isp_args
canny.c:42:52: note: each undeclared identifier is reported only once for each function it appears in
canny.c: In function 'convert_to_grayscale':
canny.c:80:11: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
     task->state = REQ_STATUS_WAITING;
           ^~~~~
           status
canny.c: In function 'noise_reduction':
canny.c:128:11: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
     task->state = REQ_STATUS_WAITING;
           ^~~~~
           status
canny.c: In function 'gradient_calculation':
canny.c:147:16: error: assignment to expression with array type
         c_args = (convolution_args*) get_memory(sizeof(convolution_args));
                ^
canny.c:150:17: error: assignment to expression with array type
         em_args = (elem_matrix_args*) get_memory(sizeof(elem_matrix_args));
                 ^
canny.c:226:18: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
         task[i]->state = REQ_STATUS_WAITING;
                  ^~~~~
                  status
canny.c:234:18: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
         task[i]->state = REQ_STATUS_WAITING;
                  ^~~~~
                  status
canny.c: In function 'non_max_suppression':
canny.c:276:21: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     img->max_values = (uint32_t) get_memory(NUM_PIXELS * 4);
                     ^
canny.c:288:11: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
     task->state = REQ_STATUS_WAITING;
           ^~~~~
           status
canny.c: In function 'thr_and_edge_tracking':
canny.c:315:11: error: 'task_struct_t {aka struct task_struct_t}' has no member named 'state'; did you mean 'status'?
     task->state = REQ_STATUS_WAITING;
           ^~~~~
           status
make: *** [<builtin>: canny.o] Error 1
rm driver.o mem_manage.o test.o scheduler.o
